--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.11.0",
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "icomoon-free-npm": "^0.0.0",
     "react": "^18.2.0",
