--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -11,7 +11,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.11.0",
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
     "icomoon-free-npm": "^0.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -22,6 +24,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
+   
   },
   "scripts": {
     "start": "react-scripts start",
