--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -11,8 +11,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.11.0",
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
     "icomoon-free-npm": "^0.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
