--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -7,6 +7,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@mailtop/horizontal-timeline": "^2.1.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
     "icomoon-free-npm": "^0.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
@@ -24,7 +26,6 @@
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
-   
   },
   "scripts": {
     "start": "react-scripts start",
