--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-sweetalert2": "^0.6.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "stream-http": "^3.2.0",
     "until": "^0.1.1",
