--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -17,6 +17,8 @@
     "date-fns": "^2.30.0",
     "https-browserify": "^1.0.0",
     "icomoon-free-npm": "^0.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -25,6 +27,8 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.15",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.5",
     "stream-http": "^3.2.0",
     "until": "^0.1.1",
