--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.11.0",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "cloudinary-react": "^1.8.1",
     "date-fns": "^2.30.0",
     "https-browserify": "^1.0.0",
     "icomoon-free-npm": "^0.0.0",
