--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -26,11 +26,11 @@
     "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-
     "react-intl": "^6.5.5",
-
+    "react-perfect-scrollbar": "^1.5.8",
     "react-pro-sidebar": "^0.7.1",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.18.0",
